# Akhenaten

./: .gitignore  CMakeLists.txt  README.md  index.html  update-workspace-bazzite.sh  update-workspace-linux.sh
.github/workflows/: akhenaten_emscripten.yml
assets/: 40X-BCvX_-xP.js  40X-Bg7FaAeM.js  40X-BiUyxfTg.js  40X-BuKZXsAM.js  40X-BwDf4EQm.js  50X-BEWNU_Wc.js  50X-C1fL07e_.js  50X-CKXViR6R.js  50X-aUKUhGru.js  50X-rX7OPsFE.js  Grid-Biv1uTox.js  Grid-ByTKMn5E.js  Grid-DI_PgKHK.js  Grid-DPT5_Pi7.js  Grid-ZoHE8ee1.js  Launcher-B6uB7p2Y.js  Launcher-BzJI7hxt.js  Launcher-DzZwoM0K.js  Launcher-L7rqR0OQ.js  Launcher-VC9_NXwb.js  Launcher-eokDA7iS.js  Stack-3fiRcd_1.js  Stack-6axDw1ZM.js  Stack-B-lg33CO.js  Stack-DFIaEkfR.js  Stack-DRCt1Zgr.js  index-COkHp0Rk.js  index-CfKig6Qk.js  index-Cr12mYfS.js  index-DRJ6UGzd.js  index-DfZq6L7o.js  index-jWh7_oNo.js
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
data/: pharaoh_custom_pack.sgx  pharaoh_fonts_pack.sgx
fontgen/: CMakeLists.txt
fontgen/app/: CMakeLists.txt  ank_font_generator.cpp
fontgen/fgen/: Atlas.cpp  Atlas.hpp  BitmapHelpers.cpp  Font.cpp  TextShaper.cpp
src/building/: building.cpp  building.h  building_bandstand.h  building_house.cpp  building_house.h  building_senet_house.cpp  building_senet_house.h  building_storage_yard.cpp
src/city/: city_buildings.cpp  city_buildings.h  city_maintenance.cpp  city_message.cpp
src/content/: content.cpp  content.h  dir.cpp  dir.h  imagepak.cpp  vfs.cpp
src/core/: encoding.cpp  encoding.h  locale.cpp
src/figure/: figure.cpp  figure.h  figure_type.h
src/figuretype/: figure_cartpusher.cpp  figure_drunkard.cpp  figure_drunkard.h  figure_musician.cpp  figure_musician.h  figure_reed_gatherer.cpp
src/game/: game.cpp  game_config.cpp  game_config.h
src/graphics/: animkeys.cpp  animkeys.h  boilerplate.cpp  font.cpp  font.h  graphics.h  image.cpp  image.h  image_groups.h  imagepak_holder.h  text.cpp  text.h
src/platform/: akhenaten.cpp  arguments.cpp  arguments.h  renderer.cpp
src/scripts/: buildings.js  figures.js  fonts.js  missions.js  (+15 more)
(+21 files in other folders)
